--- a/Facebook-Filter-master/index.html
+++ b/Facebook-Filter-master/index.html
@@ -54,7 +54,7 @@
 			canvasHeight = "500";
 			canvasWidth = "500";
 			image.src = "https://graph.facebook.com/<?php echo $_SESSION['id']; ?>/picture?width=600&height=600";
-			filterSource = "filters/filter.png";
+			filterSource = "filter.png";
 			setFacebookFilter(imageWidth,imageHeight,canvasWidth,canvasHeight,filterSource,imageSrc);
         </script>
     </body>
